Task library for object detection

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,11 +4,15 @@ plugins {
 }
 
 android {
-    namespace 'com.example.horse_human_classify'
+    namespace 'com.example.obj_detect_task_library_custom'
     compileSdk 33
 
+    aaptOptions {
+        noCompress "tflite"
+    }
+
     defaultConfig {
-        applicationId "com.example.horse_human_classify"
+        applicationId "com.example.obj_detect_task_library_custom"
         minSdk 28
         targetSdk 33
         versionCode 1
@@ -35,13 +39,16 @@ android {
 dependencies {
     implementation 'org.tensorflow:tensorflow-lite:2.8.0'
     implementation 'org.tensorflow:tensorflow-lite-gpu:2.8.0'
-    implementation 'org.tensorflow:tensorflow-lite-support:0.2.0'
+    implementation 'org.tensorflow:tensorflow-lite-support:0.3.0'
 
-    implementation 'androidx.core:core-ktx:1.10.0'
+    implementation 'androidx.core:core-ktx:1.10.1'
     implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'com.google.android.material:material:1.8.0'
+    implementation 'com.google.android.material:material:1.9.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-//    implementation 'androidx.core:core-ktx:1.10.0'
+    implementation 'org.tensorflow:tensorflow-lite-task-vision:0.3.0'
+    implementation 'org.tensorflow:tensorflow-lite-task-vision'
+    // Import the GPU delegate plugin Library for GPU inference
+    //implementation 'org.tensorflow:tensorflow-lite-gpu-delegate-plugin'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
